connected prod db

--- a/.env
+++ b/.env
@@ -3,11 +3,11 @@ PORT=3000
 NODE_ENV=development
 
 # Database Configuration
-DB_HOST=localhost
+DB_HOST=103.68.8.229
 DB_PORT=5432
-DB_NAME=postgres
-DB_USER=postgres
-DB_PASSWORD='Bhavsim&89)'
+DB_NAME=INFYTRIX_TEMP
+DB_USER=pravin
+DB_PASSWORD='StrongPassword123!'
 
 # JWT Configuration (Mock for now)
 JWT_SECRET=mock-secret-key-replace-in-production
