--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "admin-access-management-api",
   "version": "1.0.0",
   "description": "Admin API for managing user access to dashboards, brands, and platforms",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -31,6 +31,6 @@
     "nodemon": "^3.0.1"
   },
   "engines": {
-    "node": ">=16.0.0"
+    "node": "23.11.0"
   }
 }
